# Cuda_Animal_Detection

./: .gitignore  CMakeLists - Copy.txt  CMakeLists.txt  plot.py  set_env.sh
docs/plots/: Architecture.drawio
docs/presentation/: RM_AA_AN_ProjectPresentation.odp  RM_AA_AN_ProjectPresentation.pptx
docs/report/: Project_Report.docx  Project_Report.odt
image-ref-generator/ImageRefGenerator/: ImageRefGenerator.sln
image-ref-generator/ImageRefGenerator/ImageRefGenerator/: Program.cs
images/open-images/: Cat_oi_resource.linux.txt  Cat_oi_resource.windows.txt  Dog_oi_resource.linux.txt  Dog_oi_resource.windows.txt  test_oi_resource.linux.txt  test_oi_resource.windows.txt
images/open-images/Cat/Label/: 0060dfb7f9a468b5.txt  00bdb008eb688497.txt  02fcc80210b7cd5b.txt  039beb511fd1e7f7.txt  03ff0c4a800af9ec.txt  040983ac9ee15126.txt  0413f9c94df7ebcb.txt  05455df7c2b08919.txt  05798ca4c1946ae1.txt  05869b6681e12dad.txt  05ac515445e2b12f.txt  074524fc2d1b38c5.txt  07abe45f3aab23b4.txt  08f564cead06cd33.txt  09f8e760f60df0da.txt  0a563d05ebab4fe3.txt  0ad3f3375816f9ed.txt  0be5876ff26d9992.txt  0d2eb362375d5d44.txt  0d46532b8ab95063.txt  0d63660f48902dc5.txt  0ead9cb2bca86202.txt  0f426802e98a8964.txt  105a43452aedeeb7.txt  116a5833e358d6df.txt  1431788ff4626a30.txt  14b32f838a0ed041.txt  (+310 more)
images/open-images/Dog/: 00f5e32f28fc420e.jpg - Shortcut.lnk
include/: cnn.hpp  image_handler.hpp  mat.hpp  mlp.hpp  open_image.hpp  ops.hpp  ops_cpu.hpp  ops_gpu.cuh  ops_hybrid.cuh  ops_hybrid_triggers.cuh
results/: ops_test.txt  ops_test_results.txt
results/profiler_results/: add_kernel.nsight-cuprof-report  add_kernel_2.nsight-cuprof-report  add_kernel_3.nsight-cuprof-report  d_relu_kernel.nsight-cuprof-report  d_relu_kernel_2.nsight-cuprof-report  d_relu_kernel_3.nsight-cuprof-report  d_sigmoid_kernel.nsight-cuprof-report  d_sigmoid_kernel_2.nsight-cuprof-report  d_sigmoid_kernel_3.nsight-cuprof-report  mult_kernel.nsight-cuprof-report  relu_kernel_2.nsight-cuprof-report  relu_kernel_3.nsight-cuprof-report  scale_kernel.nsight-cuprof-report  scale_kernel_2.nsight-cuprof-report  sigmoid_kernel.nsight-cuprof-report  sigmoid_kernel_2.nsight-cuprof-report  sub_kernel.nsight-cuprof-report  sub_kernel_2.nsight-cuprof-report
src/: OpenImage.cpp  OpenImage.h  cnn.cpp  dummyFileTwo.cu  image_handler.cpp  main.cpp  main.cu  mat.cpp  mat.hpp  mlp.cpp  open_image.cpp  ops.hpp  ops_cpu.cpp  ops_gpu.cu  ops_hybrid.cu  test_demo.cpp  test_mat.cpp  test_mat_ops.cpp  test_mlp.cpp  test_ops.cpp  test_prof.cpp
(+1575 files in other folders)
